# eyetracker-ux-app

./: .gitignore  README.md  pyproject.toml
analysis/: __init__.py  heatmap_analyzer.py
backend/: .pre-commit-config.yaml  eye_tracking_client.py  main.py  pyproject.toml
backend/src/: bootstrap.py  exceptions.py  main.py  middlewares.py  router.py  settings.py
backend/src/apps/admin/: depends.py  middlewares.py  router.py
backend/src/apps/admin/repositories/: __init__.py  admin.py
backend/src/apps/admin/schemas/: __init__.py  admin.py
backend/src/apps/admin/services/: __init__.py  admin.py
backend/src/apps/admin/tools/: __init__.py  encoding.py
backend/src/apps/admin/use_cases/: __init__.py  login.py  register.py
backend/src/apps/data/: depends.py  router.py
backend/src/apps/data/repositories/: __init__.py  data.py
backend/src/apps/data/schemas/: __init__.py  data.py
backend/src/apps/data/services/: __init__.py  data.py
backend/src/apps/tracking/: depends.py  router.py
backend/src/apps/tracking/repositories/: __init__.py  tracking.py
backend/src/apps/tracking/schemas/: __init__.py  tracking.py
backend/src/apps/tracking/services/: __init__.py  tracking.py
backend/src/apps/tracking/use_cases/: __init__.py  admin_tests.py  create_test.py  get_commands.py  send_commands.py  webhook.py
backend/src/core/: exceptions.py  redis_db.py  use_cases.py
eye_tracking/: pyproject.toml
eye_tracking/src/: console_example.py  example.py  eye_tracking_utility.py  heatmap_generator.py  tracker.py
frontend/: index.html  package-lock.json  package.json
(+18 files in other folders)
