[project]
name = "eyetracker-ux-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "redis>=5.2.1",
    "tobii-research>=2.1.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
