[project]
name = "eyeux-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.115.12",
    "isort>=6.0.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyjwt>=2.10.1",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.20",
]
